# wisp

./: .gitignore  .goreleaser.yaml  AGENTS.md  CLAUDE.md  README.md  TODO.md  daemon.go  go.mod  go.sum  justfile  main.go  menu.go
.githooks/: pre-commit
.github/workflows/: release.yml
.ssh/: term_info_8082_ed25519  term_info_8082_ed25519.pub  term_info_8083_ed25519  term_info_8083_ed25519.pub  term_info_ed25519  term_info_ed25519.pub
cmd/: daemon.go  down.go  json.go  kick.go  kill.go  peers.go  ps.go  refresh.go  root.go  server.go  stats.go  tail.go  up.go
docs/adr/: 0001-daemon-client-architecture.md  0002-cosmic-admin-gui.md
docs/spec/: wisp-spec.md
gui/: Cargo.toml  README.md
gui/data/desktop/: dev.fabiomora.WispAdmin.desktop
gui/data/fonts/: README.md
gui/src/: app.rs  main.rs  settings.rs  subscriptions.rs  theme.rs
gui/src/backend/: cli.rs  jsonrpc.rs  mod.rs
gui/src/components/: daemon_ribbon.rs  event_tape.rs  ghost_art.rs  mod.rs  peer_row.rs  peers_table.rs  session_orb.rs  util.rs
gui/src/pages/: about.rs  daemon.rs  fleet.rs  mod.rs  settings.rs
internal/core/: config.go  daemon.go  daemon_test.go  ghost.go  menu.go  menu_test.go  pet.txt  pty.go  pty_test.go
scripts/: e2e.sh
